# pi-hls-stream

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: main.py
scripts/: streamconverter.sh  webstream.sh
