[project]
name = "pi-hls-stream"
version = "0.1.0"
description = "HLS streaming server for Raspberry Pi"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

